// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should call default props onMenuToggle function when no onMenuToggle property is passed 1`] = `
.c4 {
  text-align: center;
}

.c7 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: unset;
}

.c8 {
  font-size: 1.5em;
  margin-right: 1.75rem;
  float: left;
}

.c5 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c6 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c9 {
  display: block;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  background-color: rgba(0,0,0,0.75);
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
  id="left-navigation"
>
  <button
    className="c1 c2"
    color=""
    onClick={[Function]}
  >
    <span
      className="c3 c4 lni lni-close"
    />
  </button>
  <ul
    className="c5"
  >
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-home"
        />
        <span
          className="c9"
        >
          Home
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-users"
        />
        <span
          className="c9"
        >
          Users
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-rocket"
        />
        <span
          className="c9"
        >
          Devices
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-briefcase"
        />
        <span
          className="c9"
        >
          Costs
        </span>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should have menu toggle event listener 1`] = `
.c4 {
  text-align: center;
}

.c7 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: unset;
}

.c8 {
  font-size: 1.5em;
  margin-right: 1.75rem;
  float: left;
}

.c5 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c6 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c9 {
  display: block;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  background-color: rgba(0,0,0,0.75);
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
  id="left-navigation"
>
  <button
    className="c1 c2"
    color=""
    onClick={[Function]}
  >
    <span
      className="c3 c4 lni lni-close"
    />
  </button>
  <ul
    className="c5"
  >
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-home"
        />
        <span
          className="c9"
        >
          Home
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-users"
        />
        <span
          className="c9"
        >
          Users
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-rocket"
        />
        <span
          className="c9"
        >
          Devices
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-briefcase"
        />
        <span
          className="c9"
        >
          Costs
        </span>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should render 1`] = `
.c4 {
  text-align: center;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  background-color: rgba(0,0,0,0.75);
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
  id="left-navigation"
>
  <button
    className="c1 c2"
    color=""
    onClick={[Function]}
  >
    <span
      className="c3 c4 lni lni-close"
    />
  </button>
  
</nav>
`;

exports[`Navigation should render children menu 1`] = `
.c4 {
  text-align: center;
}

.c7 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: unset;
}

.c8 {
  font-size: 1.5em;
  margin-right: 1.75rem;
  float: left;
}

.c5 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c6 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c9 {
  display: block;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  background-color: rgba(0,0,0,0.75);
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
  id="left-navigation"
>
  <button
    className="c1 c2"
    color=""
    onClick={[Function]}
  >
    <span
      className="c3 c4 lni lni-close"
    />
  </button>
  <ul
    className="c5"
  >
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-home"
        />
        <span
          className="c9"
        >
          Home
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-users"
        />
        <span
          className="c9"
        >
          Users
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-rocket"
        />
        <span
          className="c9"
        >
          Devices
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-briefcase"
        />
        <span
          className="c9"
        >
          Costs
        </span>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should render children menu closed when given appropriate property 1`] = `
.c4 {
  text-align: center;
}

.c7 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: unset;
}

.c8 {
  font-size: 1.5em;
  margin-right: 1.75rem;
  float: left;
}

.c5 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c6 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c9 {
  display: block;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  background-color: rgba(0,0,0,0.75);
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
  id="left-navigation"
>
  <button
    className="c1 c2"
    color=""
    onClick={[Function]}
  >
    <span
      className="c3 c4 lni lni-menu"
    />
  </button>
  <ul
    className="c5"
  >
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-home"
        />
        <span
          className="c9"
        >
          Home
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-users"
        />
        <span
          className="c9"
        >
          Users
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-rocket"
        />
        <span
          className="c9"
        >
          Devices
        </span>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <span
          className="c8 c4 lni lni-briefcase"
        />
        <span
          className="c9"
        >
          Costs
        </span>
      </div>
    </li>
  </ul>
</nav>
`;
